# ISO_editor

./: .gitignore  BUILD.md  CMakeLists.txt  ISO_edit.py  MANIFEST.in  README.md  README.windows.md  ROADMAP.md  build.sh  install_deps-rhel.sh  install_deps-windows.sh  install_deps.sh  iso_logic.py  logging.conf  mingw-w64-toolchain.cmake  requirements.txt  setup_env.sh  setup_venv.sh
.github/workflows/: ci.yml  release.yml
include/: Constants.h
include/core/: ISOCore.h
include/dialogs/: PropertiesDialog.h
iso_editor_cpp/: CMakeLists.txt
iso_editor_cpp/src/: droppable_tree_widget.cpp  droppable_tree_widget.h  iso_core.cpp  iso_core.h  iso_editor.cpp  iso_editor.h  logging_utils.cpp  logging_utils.h  main.cpp  properties_dialog.cpp  properties_dialog.h  save_as_dialog.cpp  save_as_dialog.h  stylesheet.qss  test_runner.cpp  worker.cpp  worker.h
iso_editor_cpp/tests/: CMakeLists.txt  test_iso_core.cpp
legacy/: ISO_edit.py  README.md  README.windows.md  build-windows.sh  commands.py  constants.py  create_test_iso.py  install_deps.sh  iso_logic.py  pyproject.toml  requirements.txt  setup.py
legacy/tests/: test_iso_edit.py  test_iso_logic.py  test_iso_logic_extra.py
src/: Constants.cpp  ISOCore.cpp  PropertiesDialog.cpp  main.cpp
tests/: test_cue_loading.py  test_hybrid.py  test_iso_edit.py  test_iso_logic.py  test_iso_logic_extra.py  test_udf.py
