[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "iso-editor"
version = "1.0.0"
description = "A comprehensive ISO image editor with GUI"
readme = "README.md"
license = {text = "Apache-2.0"}
authors = [
    {name = "ISO Editor Team"}
]
maintainers = [
    {name = "ISO Editor Team"}
]
keywords = [
    "iso",
    "editor",
    "cd",
    "dvd",
    "image",
    "disk",
    "bootable",
    "eltorito",
    "udf",
    "joliet"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: End Users/Desktop",
    "Intended Audience :: System Administrators",
    "Topic :: System :: Archiving",
    "Topic :: System :: Filesystems",
    "Topic :: Utilities",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Operating System :: OS Independent",
    "Operating System :: POSIX :: Linux",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: MacOS",
    "Environment :: X11 Applications :: Qt",
    "Natural Language :: English",
]
requires-python = ">=3.8"
dependencies = [
    "pytest",
    "PySide6",
    "pytest-qt",
    "pycdlib",
    "pytest-cov",
    "CueParser",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-qt>=4.0",
    "pytest-cov>=3.0",
    "pylint>=2.0",
    "mypy>=0.9",
    "black>=22.0",
    "isort>=5.0",
]

[project.urls]
Homepage = "https://github.com/ivenhartford/ISO_editor"
Documentation = "https://github.com/ivenhartford/ISO_editor#readme"
Repository = "https://github.com/ivenhartford/ISO_editor"
"Bug Tracker" = "https://github.com/ivenhartford/ISO_editor/issues"
Changelog = "https://github.com/ivenhartford/ISO_editor/blob/main/README.md#changelog"

[project.scripts]
iso-editor = "ISO_edit:main"

[project.gui-scripts]
iso-editor-gui = "ISO_edit:main"

[tool.setuptools]
py-modules = ["ISO_edit", "iso_logic", "create_test_iso"]

[tool.setuptools.packages.find]
where = ["."]
include = ["*.py"]

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-ra -q --strict-markers"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

[tool.coverage.run]
source = ["."]
omit = [
    "tests/*",
    "venv/*",
    "setup.py",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
]

[tool.black]
line-length = 120
target-version = ['py38', 'py39', 'py310', 'py311', 'py312']
include = '\\.pyi?$'
extend-exclude = '''
/(
  # directories
  \\.eggs
  | \\.git
  | \\.hg
  | \\.mypy_cache
  | \\.tox
  | \\.venv
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
line_length = 120
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true

[tool.pylint.messages_control]
disable = [
    "C0103",  # invalid-name
    "C0114",  # missing-module-docstring
    "C0115",  # missing-class-docstring
    "C0116",  # missing-function-docstring
    "R0913",  # too-many-arguments
    "R0914",  # too-many-locals
]

[tool.pylint.format]
max-line-length = 120

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
disallow_incomplete_defs = false
check_untyped_defs = true
disallow_untyped_decorators = false
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
follow_imports = "normal"
ignore_missing_imports = true
